--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -3,12 +3,12 @@
 // Font Bodoni Moda weight:400 to 900
 @import 'https://fonts.googleapis.com/css2?family=Bodoni+Moda:wght@400;500;600;700;800;900&family=Work+Sans:ital,wght@0,100;0,900;1,700;1,800&display=swap';
 
-$fontLogo: Bodoni Moda; 
-$fontBodini: Bodoni Moda; 
-$fontWorkSans: Work Sans; 
+$fontlogo: Bodoni Moda;
+$fontbodini: Bodoni Moda;
+$fontworksans: Work Sans;
 
-$color-white: #FAFAFA;
-$color-burgundy: #BD1110;
-$color-grey: #322E2A;
-$color-blue: #5271FF;
-$color-cerise: rgba(99, 35, 35, 0.75);
+$color-white: #fafafa;
+$color-burgundy: #bd1110;
+$color-grey: #322e2a;
+$color-blue: #5271ff;
+$color-cerise: rgba(99, 35, 35, .75);
