--- a/assets/styles/autocomplete.scss
+++ b/assets/styles/autocomplete.scss
@@ -6,9 +6,7 @@
 
 // Search Bar
 
-.pac-container:after,
-.pac-icon 
-{
+.pac-container::after.pac-icon {
     content: none !important;
     visibility: hidden;
 }
