corrected Warning on autocomplete scss file

--- a/assets/styles/autocomplete.scss
+++ b/assets/styles/autocomplete.scss
@@ -6,7 +6,9 @@
 
 // Search Bar
 
-.pac-container::after.pac-icon {
-    content: none !important;
-    visibility: hidden;
+.pac-container::after { 
+    .pac-icon {
+        content: none !important;
+        visibility: hidden;
+    }
 }
