corrected Warning on autocomplete scss file

--- a/assets/styles/autocomplete.scss
+++ b/assets/styles/autocomplete.scss
@@ -6,9 +6,7 @@
 
 // Search Bar
 
-.pac-icon {
-    .pac-container::after {
-        content: none !important;
-        visibility: hidden;
-    }
+.pac-container::after, .pac-icon {
+    content: none !important;
+    visibility: hidden;
 }
