Removed inline CSS

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -800,6 +800,11 @@ input[type=checkbox], input[type=range]{
     align-self: center;
 }
 
+.user-title-spaces {
+    text-align: center; 
+    margin-right: 1.4rem;
+}
+
 .user_index-location-li {
     display: flex;
     flex-direction: column;
