--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -36,7 +36,7 @@
         </div>
         <div class="user_index-location">
             {% if app.user.spaces %}
-                <h3 style="text-align: center; margin-right: 1.4rem;">Mes annonces :</h3>
+                <h3 class="user-title-spaces">Mes annonces :</h3>
             {% endif %}
             <ul class="user_index-location-ul">
             {% for space in app.user.spaces %}
