corrected Warning on carousel scss file

--- a/assets/styles/autocomplete.scss
+++ b/assets/styles/autocomplete.scss
@@ -6,8 +6,8 @@
 
 // Search Bar
 
-.pac-container::after, .pac-icon 
-{
+.pac-container::after,
+.pac-icon {
     content: none !important;
     visibility: hidden;
 }
