--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -13,10 +13,10 @@ body {
 
 .navbar-invisible {
     bottom: 5px;
-    position: absolute;
     display: flex;
     justify-content: space-around;
     padding-left: 0.7rem;
+    position: absolute;
 }
 
 .navbar-a {
@@ -46,11 +46,11 @@ body {
 
 .navbar-navigation {
     background-color: #f0f6ff;
-    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
-    width: 100%;
     bottom: 0;
-    position: fixed;
+    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
     overflow-y: scroll;
+    position: fixed;
+    width: 100%;
 }
 
 .navbar-navigation ul {
@@ -81,84 +81,79 @@ body {
 }
 
 .navbar-navigation--inline ul {
-    margin: 0;
     display: flex;
     justify-content: space-around;
+    margin: 0;
     width: 100%;
 }
 
 // END NAVBAR
 
 .header-home {
+    align-items: center;
+    background-image: url("/assets/images/header.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     color: $color-white;
-    padding: 3rem 3rem 2rem 3rem;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
+    padding: 3rem 3rem 2rem 3rem;
     text-align: center;
-    background-image: url("/assets/images/header.png");
-    background-size: cover;
-    background-repeat: no-repeat;
     text-shadow: 1px 1px 1px #534f4c;
 }
 
 .logo-title {
-    font-family: $fontlogo;
     color: $color-white;
-
+    font-family: $fontlogo;
     h1 {
         font-size: 2rem;
         font-weight: 500;
-        margin: 0;
         letter-spacing: .1rem;
+        margin: 0;
         margin-right: .1rem;
 
     }
-
     h2{
         font-size: .7em;
-        margin: 0; 
         font-weight: 400; 
         letter-spacing: .7rem;
+        margin: 0; 
         margin-right: -.7rem;
     }
 }
   
 
 .form-search {
-    margin: 1rem 0 1rem 0;
     display: flex;
+    border-radius: 4px; // Rounded borders
+    box-sizing: border-box; // Make sure that padding and width stays in place
     flex-direction: row;
+    margin: 1rem 0 1rem 0;
     text-align: center;
-    border-radius: 4px;
-    // Rounded borders
-    box-sizing: border-box;
-    // Make sure that padding and width stays in place
-
     .search-bar{
-        margin: 0;
         border-radius: 20px 0 0 20px;
+        margin: 0;
     }
 }
 
 .space-pitch {
-    padding: 1rem 0 2rem;
+    color: $color-burgundy;
+    font-family: $fontworksans;
     font-size: 1.3rem;
     font-weight: 300;
     letter-spacing: .1rem;
-    font-family: $fontworksans;
+    padding: 1rem 0 2rem;
     text-align: center;
-    color: $color-burgundy;
 }
 
 .premium-title {
-    margin-top: 16rem;
-    font-size: 1.3rem;
-    font-family: $fontworksans;
-    font-weight: 400;
-    text-align: center;
     color: $color-burgundy;
+    text-align: center;
+    font-family: $fontworksans;
+    font-size: 1.3rem;
+    font-weight: 400;
+    margin-top: 16rem;
 }
 
 // START HOME_INDEX
@@ -171,15 +166,15 @@ body {
 }
 
 .show-offer {
+    color: $color-burgundy;
     display: flex;
     flex-direction: column;
-    color: $color-burgundy;
     margin: 1rem;
 }
 
 .image-offer {
-    object-fit: cover;
     border-radius: 1rem;
+    object-fit: cover;
 }
 
 .show-image-offer {
@@ -187,11 +182,11 @@ body {
 }
 
 .show-title {
-    font-family: 'Work Sans', sans-serif;
     color: grey;
-    margin-left: 1rem;
+    float: left;
+    font-family: 'Work Sans', sans-serif;
     font-size: 0.8rem;
-    float: left
+    margin-left: 1rem;
 }
 
 .cardcontent {
@@ -203,27 +198,27 @@ body {
 }
 
 .div-btn {
-    display: flex;
     align-items: center;
+    display: flex;
     justify-content: center;
     margin-bottom: 1rem;
 }
 
 .spacename {
+    font-size: 1.2rem;
     font-weight: bolder;
-    font-size: 1.2rem
 }
 
 .show-cardcontent {
-    margin-left: 1rem;
-    padding: 0;
-    font-family: 'Work Sans', sans-serif;
-    font-weight: 100;
-    font-size: 0.75rem;
-    list-style-type: none;
     display: flex;
     flex-direction: column;
     float: left;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 0.75rem;
+    font-weight: 100;
+    list-style-type: none;
+    margin-left: 1rem;
+    padding: 0;
     text-align: justify;
 }
 
@@ -232,7 +227,6 @@ body {
     display: flex;
     flex-direction: row;
     font-size: 1rem;
-
     span {
         padding: 0 0.2rem;
         font-weight: bolder;
@@ -255,11 +249,11 @@ body {
 }
 
 #price {
-    padding-left: 0;
+    border-top: 0.5px solid #eee;
     display: flex;
     justify-content: space-between;
-    border-top: 0.5px solid #eee;
     margin: 1rem;
+    padding-left: 0;
 }
 
 #spanprice {
@@ -274,46 +268,45 @@ body {
 #buttonCardShow {
     background-color: #eee;
     color: $color-grey;
-    margin-top: 1rem;
     font-weight: bold;
+    margin-top: 1rem;
 }
+
 // START FLEX OFFICE
 
 .flex-office {
     background-color: #E0C2C2;
-    text-align: center;
     border-radius: 2em;
-    padding-top: 0.5rem;
     font-family: $fontworksans;
+    padding-top: 0.5rem;
+    text-align: center;
 }
 
 h4.flex-subtitle {
     font-family: $fontworksans;
-    margin-bottom: 0;
     font-size: 0.7rem;
     font-weight: 300;
     letter-spacing: 0.3rem;
+    margin-bottom: 0;
 }
 
 h2.flex-title {
     font-family: $fontbodini;
-    margin-top: 0.5rem;
     font-size: 2rem;
     font-weight: 600;
+    margin-top: 0.5rem;
 }
 
 h4.p-title {
     margin-top: 0.5rem;
-
 }
 
 p.p-flex {
-    margin: 1rem;
-    padding-bottom: 2rem;
+    color: $color-cerise;
     font-size: 0.8rem;
     font-weight: 500;
-    color: $color-cerise;
-
+    margin: 1rem;
+    padding-bottom: 2rem;
 }
 
 // END FLEX OFFICE
@@ -331,9 +324,8 @@ p.p-flex {
 }
 
 .testimony-text {
-    margin: 0 4rem;
     font-family: $fontworksans;
-
+    margin: 0 4rem;
 }
 
 .marks-image-top {
@@ -350,16 +342,16 @@ p.p-flex {
 
 .autor-image-crop {
     border-radius: 100%;
-    overflow: hidden;
     display: inline-block;
     height: 10vh;
+    overflow: hidden;
     width: 10vh;
 }
 
 .florence {
     display: inline;
-    margin: 0 auto;
     height: 100%;
+    margin: 0 auto;
     width: auto;
 }
 
@@ -381,18 +373,18 @@ p.p-flex {
 // START PARTNER
 
 .partner {
-    text-align: center;
     background-color: $color-cerise;
     font-family: $fontworksans;
     margin-top: 3rem;
     padding:1rem 0;
+    text-align: center;
 }
 
 .partner-title {
+    color: $color-white;
     font-weight: 300;
     font-size: 1.5rem;
     letter-spacing: 0.2rem;
-    color: $color-white;
 }
 
 .partner-logos {
@@ -406,15 +398,8 @@ p.p-flex {
     margin: 0 2rem;
     padding: 1rem 0;
 }
+
 // END PARTNER
-
-
-// END SPACE_INDEX
-
-// END HOME_INDEX
-
-// END OF CARD
-
 
 // Add Space Form
 
@@ -439,13 +424,12 @@ ul {
 
 input[type=text], input[type=password],input[type=number], select, textarea, .form-content {
     background-color: rgba(224, 224, 224, 0.87);
-    width: 100%; // Full width
-    padding: 12px; // Some padding 
     border: 1px solid #ccc; // Gray border
     border-radius: 4px; // Rounded borders
-    box-sizing: border-box; // Make sure that padding and width stays in place
+    box-sizing: border-box; // Make sure that padding and width stays in placewidth: 100%; // Full width
     margin-top: 6px; // Add a top margin
     margin-bottom: 16px; // Bottom margin
+    padding: 12px; // Some padding 
     resize: vertical // Allow the user to vertically resize the textarea (not horizontally)
 }
 
@@ -454,13 +438,12 @@ input[type=text], input[type=password],input[type=number], select, textarea, .fo
 input[type=submit],
 .form-submit {
     background-color: $color-burgundy;
-    color: white;
     border: none;
-    border-radius: 5px;
     border-radius: 0 20px 20px 0;
-    padding: 10px;
     box-shadow: 0px 1px 3px #535353;
+    color: white;
     cursor: pointer;
+    padding: 10px;
     text-decoration: none;
 }
 
@@ -468,8 +451,8 @@ input[type=submit],
 // Add a background color and some padding around the form
 
 .container {
-    border-radius: 5px;
     background-color: #f2f2f2;
+    border-radius: 5px;
     padding: 20px;
 }
 
@@ -493,11 +476,11 @@ input[type=submit],
 
 .space-form-submit {
     background-color: $color-grey;
-    color: white;
-    padding: 12px 20px;
     border: none;
     border-radius: 4px;
+    color: white;
     cursor: pointer;
+    padding: 12px 20px;
     text-decoration: none;
 }
 
@@ -508,13 +491,13 @@ input[type=submit],
 }
 
 .login-title{
+    color: $color-white;
+    font-family: $fontlogo;
+    font-size: 3rem;
+    line-height: 1.5rem;
     margin: 0;
     padding-top: 1.5rem;
     text-align: center;
-    font-family: $fontlogo;
-    font-size: 3rem;
-    color: $color-white;
-    line-height: 1.5rem;
 }
 
 .conclu {
@@ -522,43 +505,43 @@ input[type=submit],
 }
 
 .invalidlogin {
-    display: flex;
-    justify-content: center;
     background-color: $color-burgundy;
     color: $color-white;
-    padding: 2rem;
+    display: flex;
+    justify-content: center;
     margin-top: 1rem;
+    padding: 2rem;
 }
 
 .connect-you {
-    margin-top: 7rem;
     display: flex;
-    justify-content: center;
-    font-family: $fontlogo;
     color: $color-white;
+    font-family: $fontlogo;
+    justify-content: center;
+    margin-top: 7rem;
 }
 
 .login-register {
-    margin: auto;
-    width: 75%;
-    padding: 3rem 2rem 2rem;
-    border-radius: 1rem;
-    height: auto;
     background-color: $color-white;
-    font-family: $fontlogo;
+    border-radius: 1rem;
     display: flex;
     flex-direction: column;
+    font-family: $fontlogo;
+    height: auto;
     justify-content: center;
+    margin: auto;
+    padding: 3rem 2rem 2rem;
+    width: 75%;
 
 }
 
 .submit-login {
+    background-color: $color-cerise;
+    border-radius: 1rem;
+    color: $color-white;
+    padding: 1rem 2rem;
     margin: auto;
     text-align: center;
-    color: $color-white;
-    background-color: $color-cerise;
-    padding: 1rem 2rem;
-    border-radius: 1rem;
 }
 
 .loginorregister {
@@ -568,10 +551,10 @@ input[type=submit],
 }
 
 .registeryou {
+    color: black;
     margin-top: 1rem;
     text-align: center;
     text-decoration: none;
-    color: black;
 }
 
 // ADD NEW SPACE
@@ -582,36 +565,35 @@ input[type=submit],
 }
 
 .new-space-title {
+    color: $color-white;
+    font-family: $fontlogo;
+    font-size: 3rem;
+    line-height: 1.5rem;
     margin: 0;
     padding-top: 1.5rem;
     text-align: center;
-    font-family: $fontlogo;
-    font-size: 3rem;
-    color: $color-white;
-    line-height: 1.5rem;
 }
 
 .create-new-space {
-    font-size: 1.5rem;
-    margin-top: 1rem;
-    display: flex;
-    justify-content: center;
-    font-family: $fontlogo;
     color: $color-white;
+    display: flex;
+    font-size: 1.5rem;
+    justify-content: center;
+    margin-top: 1rem;
+    font-family: $fontlogo;
 }
 
 .new-space-form {
-    margin: auto;
-    width: 75%;
-    padding: 2rem 2rem 1rem;
-    border-radius: 1rem;
-    height: auto;
     background-color: $color-white;
-    font-family: $fontlogo;
+    border-radius: 1rem;
     display: flex;
     flex-direction: column;
+    font-family: $fontlogo;
+    height: auto;
     justify-content: center;
-
+    margin: auto;
+    padding: 2rem 2rem 1rem;
+    width: 75%;
 }
 
 .div-add-new-space {
@@ -620,23 +602,23 @@ input[type=submit],
 }
 
 .add-new-space {
-    text-align: center;
-    color: $color-white;
     background-color: $color-cerise;
-    padding: 1rem 2rem;
     border-radius: 1rem;
+    color: $color-white;
+    padding: 1rem 2rem;
+    text-align: center;
 }
-
 
 // END NEW SPACE
 
 // START SPACE_SEARCH
+
 .search{
-    text-align: center;
     background-color: $color-cerise;
-    padding: 4rem 2rem 2rem 2rem;
     color: $color-white;
     letter-spacing: 2px;
+    padding: 4rem 2rem 2rem 2rem;
+    text-align: center;
 }
 
 .search p{
@@ -656,30 +638,30 @@ input[type=submit],
 }
 
 .filters {
-    z-index: 3;
-    width: 90%;
+    background: yellow;
     border-radius: 20px;
     position: absolute;
     top: 40%;
-    background: yellow;
+    width: 90%;
+    z-index: 3;
 }
 
 .form-filters{
+    align-items: stretch;
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    align-items: stretch;
 }
 
 input[type=checkbox], input[type=range]{
     background-color: rgba(224, 224, 224, 0.87);
-    width: 100%; // Full width
-    padding: 12px; // Some padding 
     border: 1px solid #ccc; // Gray border
     border-radius: 4px; // Rounded borders
     box-sizing: border-box; // Make sure that padding and width stays in place
-    margin-top: 6px; // Add a top margin
     margin-bottom: 16px; // Bottom margin
+    margin-top: 6px; // Add a top margin
+    padding: 12px; // Some padding
+    width: 100%; // Full width
 }
 
 .filter-button {
@@ -687,25 +669,25 @@ input[type=checkbox], input[type=range]{
 }
 
 .searchbar-and-filter {
-    display: flex;
     align-items: center;
+    display: flex;
 }
 
 // START USER INDEX
 
 .user_index-h1 {
-    text-align: center;
     background-color: $color-cerise;
+    color: $color-white;
     margin: initial;
     padding: 1rem 0;
-    color: $color-white;
+    text-align: center;
 }
 
 .user-index-container {
-    height: 50vh;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    height: 50vh;
     justify-content: space-around;
 }
 
@@ -735,17 +717,17 @@ input[type=checkbox], input[type=range]{
 }
 
 .user-index-location h3 {
-    margin-top: 2rem;
     margin-left: 2rem;
+    margin-top: 2rem;
 }
 
 .user-index-submit {
     background-color: $color-cerise;
-    color: white;
-    padding: 12px 20px;
     border: none;
     border-radius: 4px;
+    color: white;
     cursor: pointer;
+    padding: 12px 20px;
     text-decoration: none;
 }
 
@@ -754,11 +736,11 @@ input[type=checkbox], input[type=range]{
 // START USER EDIT
 
 .user-edit-h1 {
-    text-align: center;
     background-color: $color-cerise;
+    color: $color-white;
     margin: initial;
     padding: 1rem 0;
-    color: $color-white;
+    text-align: center;
 }
 
 .user-edit-div-form {
@@ -773,24 +755,23 @@ input[type=checkbox], input[type=range]{
 // END USER EDIT
 
 .modal {
+    background-color: rgba(0,0,0,0.4); // Black w/ opacity
     display: none; // Hidden by default
-    position: fixed; // Stay in place
-    z-index: 1; // Sit on top
+    height: 100%; // Full height
     left: 0;
+    position: fixed; // Stay in place
     top: 0;
     width: 100%; // Full width
-    height: 100%; // Full height
-    background-color: rgb(0,0,0); // Fallback color
-    background-color: rgba(0,0,0,0.4); // Black w/ opacity
-  }
+    z-index: 1; // Sit on top
+}
 
 // Modal Content/Box
 .modal-content {
     background-color: $color-grey;
-    padding: 1rem;
     border: 1px solid #888;
     box-shadow: gray;
     margin: 1rem;
+    padding: 1rem;
   }
 
 // The close-search Button
@@ -809,10 +790,10 @@ input[type=checkbox], input[type=range]{
   }
 
 .return-button{
-    height: 100%;
-    margin-left: 1rem;
     background-color: Transparent;
     background-repeat: no-repeat;
     border: none;
     cursor: pointer;
+    height: 100%;
+    margin-left: 1rem;
 }
