corrected Warning on app scss file

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -7,6 +7,8 @@ $fontlogo: Bodoni Moda;
 $fontbodini: Bodoni Moda;
 $fontworksans: Work Sans;
 
+$color-background-navbar: #f0f6ff;
+$color-black-opacity:rgba(0, 0, 0, .3);
 $color-white: #fafafa;
 $color-burgundy: #bd1110;
 $color-grey: #322e2a;
