--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,7 +1,7 @@
-@import "variables.scss";
-@import "carousel.scss";
-@import "autocomplete.scss";
-@import "~bootstrap/scss/bootstrap";
+@import 'variables';
+@import 'carousel';
+@import 'autocomplete';
+@import '~bootstrap/scss/bootstrap';
 
 body {
     margin: 0;
@@ -15,7 +15,7 @@ body {
     bottom: 5px;
     display: flex;
     justify-content: space-around;
-    padding-left: 0.7rem;
+    padding-left: .7rem;
     position: absolute;
 }
 
@@ -45,9 +45,9 @@ body {
 }
 
 .navbar-navigation {
-    background-color: #f0f6ff;
+    background-color: $color-background-navbar;
     bottom: 0;
-    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
+    box-shadow: 0 .5em 1em $color-black-opacity;
     overflow-y: scroll;
     position: fixed;
     width: 100%;
@@ -74,10 +74,10 @@ body {
 
 .navbar-navigation a::after {
     block-size: 100%;
-    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.3);
+    box-shadow: 0 .5em 1em $color-black-opacity;
     inline-size: 100%;
     opacity: 0;
-    transition: opacity 0.3s;
+    transition: opacity .3s;
 }
 
 .navbar-navigation--inline ul {
@@ -106,6 +106,7 @@ body {
 .logo-title {
     color: $color-white;
     font-family: $fontlogo;
+
     h1 {
         font-size: 2rem;
         font-weight: 500;
@@ -114,6 +115,7 @@ body {
         margin-right: .1rem;
 
     }
+
     h2{
         font-size: .7em;
         font-weight: 400; 
@@ -131,6 +133,7 @@ body {
     flex-direction: row;
     margin: 1rem 0 1rem 0;
     text-align: center;
+
     .search-bar{
         border-radius: 20px 0 0 20px;
         margin: 0;
@@ -185,14 +188,14 @@ body {
     color: grey;
     float: left;
     font-family: 'Work Sans', sans-serif;
-    font-size: 0.8rem;
+    font-size: .8rem;
     margin-left: 1rem;
 }
 
 .cardcontent {
     font-family: 'Work Sans', sans-serif;
     font-weight: 100;
-    font-size: 0.75rem;
+    font-size: .75rem;
     list-style-type: none;
     padding-left: 1rem;
 }
@@ -214,7 +217,7 @@ body {
     flex-direction: column;
     float: left;
     font-family: 'Work Sans', sans-serif;
-    font-size: 0.75rem;
+    font-size: .75rem;
     font-weight: 100;
     list-style-type: none;
     margin-left: 1rem;
@@ -227,16 +230,17 @@ body {
     display: flex;
     flex-direction: row;
     font-size: 1rem;
+
     span {
-        padding: 0 0.2rem;
+        padding: 0 .2rem;
         font-weight: bolder;
     }
 }
 
 .card-content-up {
     font-weight: bold;
-    padding-bottom: 0.5rem;
-    margin-top: 0.5rem;
+    padding-bottom: .5rem;
+    margin-top: .5rem;
 }
 
 .card-content-down {
@@ -249,7 +253,7 @@ body {
 }
 
 #price {
-    border-top: 0.5px solid #eee;
+    border-top: .5px solid #eee;
     display: flex;
     justify-content: space-between;
     margin: 1rem;
@@ -278,15 +282,15 @@ body {
     background-color: #E0C2C2;
     border-radius: 2em;
     font-family: $fontworksans;
-    padding-top: 0.5rem;
+    padding-top: .5rem;
     text-align: center;
 }
 
 h4.flex-subtitle {
     font-family: $fontworksans;
-    font-size: 0.7rem;
+    font-size: .7rem;
     font-weight: 300;
-    letter-spacing: 0.3rem;
+    letter-spacing: .3rem;
     margin-bottom: 0;
 }
 
@@ -294,16 +298,16 @@ h2.flex-title {
     font-family: $fontbodini;
     font-size: 2rem;
     font-weight: 600;
-    margin-top: 0.5rem;
+    margin-top: .5rem;
 }
 
 h4.p-title {
-    margin-top: 0.5rem;
+    margin-top: .5rem;
 }
 
 p.p-flex {
     color: $color-cerise;
-    font-size: 0.8rem;
+    font-size: .8rem;
     font-weight: 500;
     margin: 1rem;
     padding-bottom: 2rem;
@@ -320,7 +324,7 @@ p.p-flex {
     font-family:  $fontbodini;
     font-size: 1.5rem;
     color: $color-cerise;
-    margin-bottom: 0.5rem;
+    margin-bottom: .5rem;
 }
 
 .testimony-text {
@@ -333,7 +337,7 @@ p.p-flex {
 }
 
 .p-testimony {
-    margin: 0.2rem;
+    margin: .2rem;
 }
 
 .marks-image-bottom {
@@ -358,8 +362,8 @@ p.p-flex {
 .autor-name {
     font-family: $fontworksans;
     font-weight: 400;
-    letter-spacing: 0.1rem;
-    margin-bottom: 0.3rem;
+    letter-spacing: .1rem;
+    margin-bottom: .3rem;
 }
 
 .autor-info {
@@ -384,13 +388,13 @@ p.p-flex {
     color: $color-white;
     font-weight: 300;
     font-size: 1.5rem;
-    letter-spacing: 0.2rem;
+    letter-spacing: .2rem;
 }
 
 .partner-logos {
     display: flex;
     justify-content: space-around;
-    margin: 0 0.5rem;
+    margin: 0 .5rem;
 }
 
 .partner-text{
@@ -423,7 +427,7 @@ ul {
 // Style inputs with type="text", select elements and textareas
 
 input[type=text], input[type=password],input[type=number], select, textarea, .form-content {
-    background-color: rgba(224, 224, 224, 0.87);
+    background-color: rgba(224, 224, 224, .87);
     border: 1px solid #ccc; // Gray border
     border-radius: 4px; // Rounded borders
     box-sizing: border-box; // Make sure that padding and width stays in placewidth: 100%; // Full width
@@ -629,7 +633,7 @@ input[type=submit],
     background-color: $color-white;
     border: $color-grey;
     border-radius: 20px;
-    box-shadow: 2px -6px 10px 0px rgba(0, 0, 0, 0.84);
+    box-shadow: 2px -6px 10px 0px rgba(0, 0, 0, .84);
     height: 80vh;
 }
 
@@ -654,7 +658,7 @@ input[type=submit],
 }
 
 input[type=checkbox], input[type=range]{
-    background-color: rgba(224, 224, 224, 0.87);
+    background-color: rgba(224, 224, 224, .87);
     border: 1px solid #ccc; // Gray border
     border-radius: 4px; // Rounded borders
     box-sizing: border-box; // Make sure that padding and width stays in place
@@ -755,7 +759,7 @@ input[type=checkbox], input[type=range]{
 // END USER EDIT
 
 .modal {
-    background-color: rgba(0,0,0,0.4); // Black w/ opacity
+    background-color: rgba(0,0,0,.4); // Black w/ opacity
     display: none; // Hidden by default
     height: 100%; // Full height
     left: 0;
