--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -8,7 +8,11 @@ $fontbodini: Bodoni Moda;
 $fontworksans: Work Sans;
 
 $color-background-navbar: #f0f6ff;
+$color-black: #000000;
+$color-yellow: #ffff00;
+$color-light-grey: #888;
 $color-black-opacity:rgba(0, 0, 0, .3);
+$color-light-red: rgb(196, 154, 154);
 $color-white: #fafafa;
 $color-burgundy: #bd1110;
 $color-grey: #322e2a;
