--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -9,7 +9,7 @@
     <div class="user-edit-div-form">
         {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
     </div>
-    <div class="user_edit-return">
+    <div class="user-edit-return">
         <a class="user-index-submit" href="{{ path('user_index') }}">Retour à mes informations</a>
     </div>
     {# {{ include('user/_delete_form.html.twig') }} #}
