--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="user_index-h1">
+    <div class="user-index-h1">
         <h1>Mes informations</h1>
     </div>
     {% for category, messages in app.flashes %}
