--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -269,7 +269,7 @@ body {
 }
 
 #buttonCardShow {
-    background-color: #eee;
+    background-color: $color-white;
     color: $color-grey;
     font-weight: bold;
     margin-top: 1rem;
