Fixes on query advanced search

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -276,6 +276,11 @@ body {
     text-align: center;
 }
 
+.spaces-length {
+    text-align: center;
+    margin-top: 1rem;
+}
+
 #buttonCardShow {
     background-color: #eee;
     color: $color-grey;
