Number => Range for the input type

--- a/templates/space/_filters.html.twig
+++ b/templates/space/_filters.html.twig
@@ -30,10 +30,10 @@
 			</label>
 
 			<label for="range">Prix</label>
-			<input type="number" id="price" name="price" min="10" max="1500" step="10">
+			<input type="range" id="price" name="price" min="10" max="1500" step="10">
 
 			<label for="range">Surface</label>
-			<input type="number" id="surface" name="surface" min="5" max="1000" step="10">
+			<input type="range" id="surface" name="surface" min="5" max="1000" step="10">
 
 			<label for="start">Dates</label>
 			<input type="date" id="start" name="date" value="2022-01-15" min="2021-01-05" max="2024-12-31">
