--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,14 +11,11 @@
         {{ form_row(registrationForm.lastname) }}
         {{ form_row(registrationForm.firstname) }}
         {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Mot de passe'
-        }) }}
+        {{ form_row(registrationForm.plainPassword) }}
         {{ form_row(registrationForm.avatar) }}
         {{ form_row(registrationForm.company) }}
         {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">S'enregistrer</button>
+        {{ form_row(registrationForm.enregistrer) }}
     {{ form_end(registrationForm) }}
     </div>
 {% endblock %}
