--- a/templates/space/search.html.twig
+++ b/templates/space/search.html.twig
@@ -3,13 +3,15 @@
 {% endblock %}
 {% block body %}
 	<div class="search">
-		{% include "_logoTitle.html.twig" %}
+		<div class="title">
+			{% include "_logoTitle.html.twig" %}
+		</div>
 		<p>Que recherchez - vous ?</p>
 		<div class="searchbar-and-filter">
 			<div class="search-container">
 				{% include '_searchbar.html.twig' %}
 			</div>
-				{% include 'space/_filters.html.twig' %}
+			{% include 'space/_filters.html.twig' %}
 		</div>
 	</div>
 
@@ -22,7 +24,8 @@
 				espace disponible
 			{% endif %}
 			{% if location %}
-				à {{ location }}
+				à
+				{{ location }}
 			{% endif %}
 		</p>
 		{% for space in spaces %}
@@ -49,7 +52,7 @@
 								/ jour</span>
 						</div>
 						<a class="form-submit" id="buttonCardShow" href="{{ path("space_show", {id: space.id}) }}">Voir
-																																																																																																																																																																																																																																																																																																																																																			l'annonce</a>
+																																																																																																																																																																																																																																																																																																																																																										l'annonce</a>
 					</div>
 				</figcaption>
 			</figure>
@@ -57,7 +60,7 @@
 	</div>
 {% elseif location %}
 	<p>
-		Aucun espace trouvé à {{ location }}
+		Aucun espace trouvé à
+		{{ location }}
 	</p>
-{% endif %}
-{% endblock %}
+{% endif %}{% endblock %}
