--- a/templates/space/_filters.html.twig
+++ b/templates/space/_filters.html.twig
@@ -5,47 +5,47 @@
 	<!-- Modal content -->
 	<div class="modal-content">
 		<form class="form-filters">
-			<label for="opt-in">
-				<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox">
-				Salle de réunion
-			</label>
-			<label for="opt-in">
-				<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox">
-				Co-working
-			</label>
-			<label for="opt-in">
-				<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox">
-				Bureau privé
-			</label>
-			<label for="opt-in">
-				<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox">
-				Open space
-			</label>
-			<label for="opt-in">
-				<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox">
-				Espace de stockage
-			</label>
-			<label for="opt-in">
-				<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox">
-				Plateaux vides
-			</label>
-
+			<div>
+				<label for="start">Dates</label>
+				<input type="date" id="start" name="date" placeholder="m²" value="2022-01-15" min="2021-01-05" max="2024-12-31">
+			</div>
+			<div class="space-filter">
+				<label for="opt-in">
+					<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox" hidden>
+					Salle de réunion
+				</label>
+				<label for="opt-in">
+					<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox" hidden>
+					Co-working
+				</label>
+				<label for="opt-in">
+					<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox" hidden>
+					Bureau privé
+				</label>
+				<label for="opt-in">
+					<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox" hidden>
+					Open space
+				</label>
+				<label for="opt-in">
+					<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox" hidden>
+					Espace de stockage
+				</label>
+				<label for="opt-in">
+					<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox" hidden>
+					Plateaux vides
+				</label>
+			</div>
 			<label for="range">Prix maximum</label>
-			<input type="range" id="range" name="price" min="10" max="1500" step="10"  oninput="this.form.priceInput.value=this.value">
-			<input type="number" name="priceInput" min="0" max="20" value="0" oninput="this.form.priceRange.value=this.value" />
-
-
+			<input type="range" id="range" name="price" min="10" max="1500" step="10" oninput="this.form.priceInput.value=this.value">
+			<input type="number" name="priceInput" min="0" max="20" value="0" oninput="this.form.priceRange.value=this.value"/>
 			<label for="range">Surface minimum</label>
-			<input type="range" id="range" name="surface" min="5" max="1000" step="10"  oninput="this.form.amountInput.value=this.value">
-    		<input type="number" name="amountInput" min="0" max="20" value="0" oninput="this.form.amountRange.value=this.value" />
-
-			<label for="start">Dates</label>
-			<input type="date" id="start" name="date" placeholder="m²" value="2022-01-15" min="2021-01-05" max="2024-12-31">
+			<input type="range" id="range" name="surface" min="5" max="1000" step="10" oninput="this.form.amountInput.value=this.value">
+			<input type="number" name="amountInput" min="0" max="20" value="0" oninput="this.form.amountRange.value=this.value"/>
 		</form>
-     		<span class='closeSearch' onclick='closeModal()'>&times;</span>
+		<span class='closeSearch' onclick='closeModal()'>&times;</span>
 	</div>
 </div>
- <script>
+<script>
 	// Get the modal
 const modal = document.getElementById("myModal");
 // Get the button that opens the modal
