--- a/templates/space/search.html.twig
+++ b/templates/space/search.html.twig
@@ -7,9 +7,59 @@
 		<p>Que recherchez - vous ?</p>
 		<div class="searchbar-and-filter">
 			<div class="search-container">
-				{% include '_searchbar.html.twig' %}
+			<form action="{{ path('space_search') }}" method="get" class="form-search">
+			<input class="search-bar" type="text" id="autocomplete" placeholder="Ou souhaitez-vous travailler ?" name="location" value="{{ location ?? '' }}">
+		<button class="btn form-submit">
+			Chercher
+		</button>
+				<script type="text/javascript" src="{{ api }}"></script>
+		</script>
+				</div>
+			<span class="returnButton" id="myModalBtn">{% include "space/_filter_button.html.twig" %}</span>
+
+			<div
+				id="myModal" class="modal">
+				<!-- Modal content -->
+				<div class="modal-content">
+						<label for="opt-in">
+							<input type="checkbox" name="reunion" id="opt-in" class="hidden-checkbox">
+							Salle de réunion
+						</label>
+						<label for="opt-in">
+							<input type="checkbox" name="coworking" id="opt-in" class="hidden-checkbox">
+							Co-working
+						</label>
+						<label for="opt-in">
+							<input type="checkbox" name="bureauprive" id="opt-in" class="hidden-checkbox">
+							Bureau privé
+						</label>
+						<label for="opt-in">
+							<input type="checkbox" name="opensp" id="opt-in" class="hidden-checkbox">
+							Open space
+						</label>
+						<label for="opt-in">
+							<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox">
+							Espace de stockage
+						</label>
+						<label for="opt-in">
+							<input type="checkbox" name="my-checkbox" id="opt-in" class="hidden-checkbox">
+							Plateaux vides
+						</label>
+			
+						<label for="range">Prix</label>
+						<input type="range" id="price" name="price" min="10" max="1500" step="10">
+			
+						<label for="range">Surface</label>
+						<input type="range" id="surface" name="surface" min="5" max="1000" step="10">
+			
+						<label for="start">Dates</label>
+						<input type="date" id="start" name="date" value="2022-01-15" min="2021-01-05" max="2024-12-31">
+			
+						<button class="closeSearch" type="submit">
+							Chercher
+						</button>
+				</div>
 			</div>
-				{% include 'space/_filters.html.twig' %}
 		</div>
 	</div>
 
@@ -23,17 +73,6 @@
 			{% else %}
 			</h2>
 			{% endif %}
-		<p class="spaces-title">
-			{{ spaces|length }}
-			{% if spaces|length > 1 %}
-				espaces disponibles
-			{% else %}
-				espace disponible
-			{% endif %}
-			{% if location %}
-				à {{ location }}
-			{% endif %}
-		</p>
 		{% for space in spaces %}
 			<figure class="offer">
 				<img class="image-offer" src="{{ asset('build/images/imageHome.svg') }}" alt="Marché Conclu"/>
@@ -64,9 +103,30 @@
 			</figure>
 		{% endfor %}
 	</div>
-{% elseif location %}
+{% else %}
 	<p>
-		Aucun espace trouvé à {{ location }}
+		Aucun espace trouvé
 	</p>
-{% endif %}
-{% endblock %}
+	<script>
+		// Get the modal
+	const modal = document.getElementById("myModal");
+	// Get the button that opens the modal
+	const btn = document.getElementById("myModalBtn");
+	// Get the button closeSearch element that closes the modal
+	const closeSearch = document.getElementsByClassName("closeSearch")[0];
+	// When the user clicks the button, open the modal
+	btn.onclick = function () {
+	modal.style.display = "block";
+	}
+	// When the user clicks on rechercher(x), close the modal
+	closeSearch.onclick = function () {
+	modal.style.display = "none";
+	}
+	// When the user clicks anywhere outside of the modal, close it
+	window.onclick = function (event) {
+	if (event.target == modal) {
+	modal.style.display = "none";
+	}
+	}
+	</script>
+{% endif %}{% endblock %}
