Closed form on searchbar

--- a/templates/_searchbar.html.twig
+++ b/templates/_searchbar.html.twig
@@ -3,6 +3,7 @@
     <button class="btn form-submit">
         Chercher
     </button>
-			<script type="text/javascript" src="{{ api }}"></script>
+</form>
+<script type="text/javascript" src="{{ api }}"></script>
     </script>
 
