--- a/templates/_carousel.html.twig
+++ b/templates/_carousel.html.twig
@@ -1,6 +1,6 @@
 
 <div class="carousel">
-            <div class="carousel-item carousel-item-visible">
+            <div class="carousel-item-mc carousel-item-visible">
                 <img src="{{ asset('build/images/bureauprivee.jpg') }}"
                     alt="bureau privee" />
                 <a href="#">
@@ -9,7 +9,7 @@
                     </div>
                 </a>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item-mc">
                 <img src="{{ asset('build/images/coworking.jpg') }}"
                     alt="co-working" />
                 <a href="#">
@@ -18,7 +18,7 @@
                     </div>
                 </a>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item-mc">
                 <img src="{{ asset('build/images/salledereunion.jpg') }}"
                     alt="salle de reunion" />
                 <a href="#">
@@ -27,7 +27,7 @@
                     </div>
                 </a>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item-mc">
                 <img src="{{ asset('build/images/openspace.jpg') }}"
                     alt="open space" />
                 <a href="#">
@@ -36,7 +36,7 @@
                     </div>
                 </a>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item-mc">
                 <img src="{{ asset('build/images/espacedestockage.jpg') }}"
                     alt="espace de stockage" />
                 <a href="#">
