--- a/assets/styles/carousel.scss
+++ b/assets/styles/carousel.scss
@@ -4,7 +4,7 @@
     position: relative;
 }
 
-.carousel .carousel-item,
+.carousel .carousel-item-mc,
 .carousel .carousel-item-hidden {
     display: none; // hide all slide images not currently being viewed
 }
@@ -14,7 +14,7 @@
     display: block; // show current slide image
 }
 
-.carousel .carousel-item img {
+.carousel .carousel-item-mc img {
     height: 25vh;
     object-fit: cover;
     width: 100%;
@@ -27,7 +27,7 @@
     justify-content: space-between; // put space between the navigation buttons
     position: absolute; // position navigation buttons on top
     top: 50%; // center navigation buttons on the slide
-    transform: translateY(200%); // align navigation buttons
+    transform: translateY(-50%); // align navigation buttons
     width: 100%;
 }
 
@@ -47,7 +47,7 @@
     z-index: -1;
 }
 
-.carousel.carousel-actions button#carousel-button-next {
+.carousel .carousel-actions button#carousel-button-next {
     margin-right: 20px;  // prevent next button from touching the side*/
     z-index: -1;
 }
