--- a/templates/space/show.html.twig
+++ b/templates/space/show.html.twig
@@ -4,6 +4,36 @@
 {% endblock %}
 
 {% block body %}
+<div class="carousel">
+            <div class="carousel-item-mc carousel-item-visible">
+                <img src="{{ asset('build/images/' ~ space.photos) }}"
+                    alt="bureau privee" />
+            </div>
+            <div class="carousel-item-mc">
+                <img src="{{ asset('build/images/coworking.jpg') }}"
+                    alt="co-working" />
+            </div>
+            <div class="carousel-item-mc">
+                <img src="{{ asset('build/images/salledereunion.jpg') }}"
+                    alt="salle de reunion" />
+            </div>
+            <div class="carousel-item-mc">
+                <img src="{{ asset('build/images/openspace.jpg') }}"
+                    alt="open space" />
+            </div>
+            <div class="carousel-item-mc">
+                <img src="{{ asset('build/images/espacedestockage.jpg') }}"
+                    alt="espace de stockage" />
+            </div>
+            <div class="carousel-actions">
+                <button id="carousel-button-prev" aria-label="Previous"><</button>
+                <button id="carousel-button-next" aria-label="Next">></button>
+            </div>
+</div>
+<div class="show-space-head">
+	<h1>ZEGZEGEZ</h1>
+</div>
+{# 
 	<h1 class="show-title">Accueil /
 		{{ space.location }}
 		/
@@ -50,5 +80,5 @@
 			<a class="form-submit" href="{{ path('space_edit', {'id': space.id}) }}">Modifier votre annonce</a>
 		</div>
 	</div>
-	{{ include('space/_delete_form.html.twig') }}
+	{{ include('space/_delete_form.html.twig') }} #}
 {% endblock %}
