--- a/templates/_carousel.html.twig
+++ b/templates/_carousel.html.twig
@@ -1,7 +1,7 @@
 
 <div class="carousel">
             <div class="carousel-item carousel-item-visible">
-                <img src="{{ asset('build/images/bureauprivee.jpg') }}"
+                <img src="{{ asset(vich_uploader_asset(program)) }}"
                     alt="bureau privee" />
                 <a href="#">
                     <div class="texte-center">
