--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -33,7 +33,7 @@
 	<h3 class="premium-title">Annonces premium</h3>
 	{% for space in spaces %}
 		<figure class="offer">
-			<img class="image-offer" src="{{ asset('build/images/imageHome.svg') }}" alt="Marché Conclu"/>
+			<img class="image-offer" src="{{ vich_uploader_asset(space) }}" alt="Marché Conclu"/>
 			<figcaption class="text-offer">
 				<div class="card-border card-content-up cardcontent">
 					<div class="spacecategory card-content-up">{{ space.category }}
